# Pstryk-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: config.py  crypto.py  db.py  main.py  models.py  scheduler.py  state.py
app/api/: routes_charts.py  routes_dashboard.py  routes_settings.py
app/clients/: blebox.py  pstryk.py
app/services/: aggregations.py  cost.py  ingest.py  settings_service.py  timeseries.py
app/static/css/: app.css
app/static/js/: charts.js
app/templates/: base.html  dashboard.html  settings.html
app/templates/partials/: backfill_status.html  cheapest_hours.html  health_status.html  live_tile.html
tests/: conftest.py  test_aggregations.py  test_blebox_client.py  test_cost.py  test_healthz.py  test_ingest.py  test_pstryk_client.py  test_routes_dashboard.py  test_routes_settings.py  test_settings_service.py  test_timeseries.py
tests/fixtures/: blebox_state.json  pstryk_unified.json
