[project]
name = "pstryk-dashboard"
version = "0.1.0"
description = "Personal energy-monitoring dashboard combining Pstryk dynamic-tariff data with a BleBox energy meter."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "sq2cet" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10,<4.0",
    "jinja2>=3.1",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
